# to-do-web-app

./: .gitignore  README.md  app.py  changelog.md  config.py  conftest.py  deploy_script.sh  flask_app.py  pyproject.toml  requirements.txt  test_flask_app.py
.github/workflows/: deploy.yml
models/: task.py  user.py
routes/: api.py  authentication.py  home.py  tasks.py
static/: styles.css
templates/: dashboard.html  edit.html  index.html  login.html  register.html
tests/: conftest.py  helper.py  helpers.py  test_add_tasks.py  test_bulk_insert_tasks.py  test_complete_task.py  test_count_tasks.py  test_delete_all_tasks.py  test_delete_task.py  test_edit.py  test_exclude_or_include_tasks.py  test_get_tasks.py
