[project]
name = "to-do-web-app"
version = "1.1.1"
description = "A To-Do Web APp"
authors = [
    {name = "adamfinklecloudberry",email = "198999961+adamfinklecloudberry@users.noreply.github.com"}
]
license = {text = "GPL 3.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black (==25.1.0)",
    "blinker (==1.9.0)",
    "click (==8.1.8)",
    "flask (==3.1.0)",
    "flask-login (==0.6.3)",
    "flask-sqlalchemy (==3.1.1)",
    "greenlet (==3.1.1)",
    "iniconfig (==2.0.0)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.5)",
    "markupsafe (==3.0.2)",
    "mypy-extensions (==1.0.0)",
    "packaging (==24.2)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.3.6)",
    "pluggy (==1.5.0)",
    "pytest (==8.3.4)",
    "python-dotenv (==1.0.1)",
    "sqlalchemy (==2.0.38)",
    "typing-extensions (==4.12.2)",
    "werkzeug (==3.1.3)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
